--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 title                    : "Karthik Guruvayurappan"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Karthik Guruvayurappan"
 description              : &description "personal description"
 url                      : https://somet3000.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
