--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=RWn1XV4AAAAJ&hl=en&oi=ao"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AILGF5XZ08lp3aN_NN8Ow2K4rF1HovNGG6IxbE3kDVKxPKWZbAo-DpCRsieESmunzCw5eU6UgKvbbV3vCjJJ-g&user=ZLrXumYAAAAJ"
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0003-3791-8387"
   researchgate     : # URL
