--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Karthik Guruvayurappan"
   pronouns         : "he/him"  
-  bio              : "Computational Biology PhD Student"
+  bio              : "Computational Biology PhD Student @ Cornell"
   email            : "karthikguruvayurappan@gmail.com" 
 
   # Academic websites
